// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchInput/> render() should render a closed dropdown because input is empty 1`] = `
<Dropdown
  a11y={true}
  active={false}
  addonType={false}
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-expanded={false}
    aria-haspopup={true}
    className="input-icon input-icon-right"
    color="secondary"
    data-toggle="dropdown"
    tag="div"
  >
    <ForwardRef(TextInput)
      hasError={false}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search..."
      suffix={
        <IconInput
          icon="more_horiz"
        />
      }
      value=""
    />
  </DropdownToggle>
  <DropdownMenu
    className="dropdown"
    flip={true}
    tag="div"
  >
    <DropdownItem
      className="header"
      header={true}
      tag="button"
      toggle={true}
    >
      0 result
    </DropdownItem>
  </DropdownMenu>
</Dropdown>
`;

exports[`<SearchInput/> render() should render a closed dropdown because input is not focused 1`] = `
<Dropdown
  a11y={true}
  active={false}
  addonType={false}
  direction="down"
  inNavbar={false}
  isOpen={false}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-expanded={false}
    aria-haspopup={true}
    className="input-icon input-icon-right"
    color="secondary"
    data-toggle="dropdown"
    tag="div"
  >
    <ForwardRef(TextInput)
      hasError={false}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search..."
      suffix={
        <IconInput
          icon="more_horiz"
        />
      }
      value=""
    />
  </DropdownToggle>
  <DropdownMenu
    className="dropdown"
    flip={true}
    tag="div"
  >
    <DropdownItem
      className="header"
      header={true}
      tag="button"
      toggle={true}
    >
      0 result
    </DropdownItem>
  </DropdownMenu>
</Dropdown>
`;

exports[`<SearchInput/> render() should render an open dropdown because input is focused and value is not empty 1`] = `
<Dropdown
  a11y={true}
  active={false}
  addonType={false}
  direction="down"
  inNavbar={false}
  isOpen={true}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-expanded={true}
    aria-haspopup={true}
    className="input-icon input-icon-right"
    color="secondary"
    data-toggle="dropdown"
    tag="div"
  >
    <ForwardRef(TextInput)
      hasError={false}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search..."
      suffix={
        <IconInput
          icon="search"
        />
      }
      value="foo"
    />
  </DropdownToggle>
  <DropdownMenu
    className="dropdown"
    flip={true}
    tag="div"
  >
    <DropdownItem
      className="header"
      header={true}
      tag="button"
      toggle={true}
    >
      3 results
    </DropdownItem>
    <DropdownItem
      aria-disabled={true}
      className="dropdownItem"
      id="dropdown-item-1"
      key="result-1"
      onClick={[Function]}
      onMouseEnter={[Function]}
      tag="button"
      toggle={false}
    >
      <Result
        result={
          {
            "id": 1,
            "subResults": [],
          }
        }
      />
      <Tooltip
        className="tooltip"
        placement="top"
        target="dropdown-item-1"
      >
        This item cannot be selected.
      </Tooltip>
    </DropdownItem>
    <DropdownItem
      aria-disabled={false}
      className="dropdownItem"
      id="dropdown-item-2"
      key="result-2"
      onClick={[Function]}
      onMouseEnter={[Function]}
      tag="button"
      toggle={false}
    >
      <Result
        result={
          {
            "id": 2,
            "subResults": [],
          }
        }
      />
    </DropdownItem>
    <DropdownItem
      aria-disabled={false}
      className="dropdownItem"
      id="dropdown-item-3"
      key="result-3"
      onClick={[Function]}
      onMouseEnter={[Function]}
      tag="button"
      toggle={false}
    >
      <Result
        result={
          {
            "id": 3,
            "subResults": [],
          }
        }
      />
    </DropdownItem>
  </DropdownMenu>
</Dropdown>
`;

exports[`<SearchInput/> render() should render sub results 1`] = `
<Dropdown
  a11y={true}
  active={false}
  addonType={false}
  direction="down"
  inNavbar={false}
  isOpen={true}
  nav={false}
  setActiveFromChild={false}
  toggle={[Function]}
>
  <DropdownToggle
    aria-expanded={true}
    aria-haspopup={true}
    className="input-icon input-icon-right"
    color="secondary"
    data-toggle="dropdown"
    tag="div"
  >
    <ForwardRef(TextInput)
      hasError={false}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      placeholder="Search..."
      suffix={
        <IconInput
          icon="search"
        />
      }
      value="foo"
    />
  </DropdownToggle>
  <DropdownMenu
    className="dropdown"
    flip={true}
    tag="div"
  >
    <DropdownItem
      className="header"
      header={true}
      tag="button"
      toggle={true}
    >
      <ForwardRef
        className="mr-2 backButton"
        intent="secondary"
        onClick={[Function]}
        size="small"
      >
        <ButtonIconLabel
          icon="arrow_back"
        >
          Back
        </ButtonIconLabel>
      </ForwardRef>
      2 sub results
    </DropdownItem>
    <DropdownItem
      className="dropdownItem"
      key="sub-result-20"
      onClick={[Function]}
      onMouseEnter={[Function]}
      tag="button"
      toggle={true}
    >
      <SubResult
        result={
          {
            "id": 2,
            "subResults": [
              {
                "id": 20,
              },
              {
                "id": 21,
              },
            ],
          }
        }
        subResult={
          {
            "id": 20,
          }
        }
      />
    </DropdownItem>
    <DropdownItem
      className="dropdownItem"
      key="sub-result-21"
      onClick={[Function]}
      onMouseEnter={[Function]}
      tag="button"
      toggle={true}
    >
      <SubResult
        result={
          {
            "id": 2,
            "subResults": [
              {
                "id": 20,
              },
              {
                "id": 21,
              },
            ],
          }
        }
        subResult={
          {
            "id": 21,
          }
        }
      />
    </DropdownItem>
  </DropdownMenu>
</Dropdown>
`;
